vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-11.snap
---
source: src/lexer/test.rs
expression: "lex(\"Value\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 5,
            },
            kind: Value,
        },
    ],
)
