vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-12.snap
---
source: src/lexer/test.rs
expression: "lex(\"Of\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 2,
            },
            kind: Of,
        },
    ],
)
