vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-14.snap
---
source: src/lexer/test.rs
expression: "lex(\"To\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 2,
            },
            kind: To,
        },
    ],
)
