vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-15.snap
---
source: src/lexer/test.rs
expression: "lex(\"From\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 4,
            },
            kind: From,
        },
    ],
)
