vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-19.snap
---
source: src/lexer/test.rs
expression: "lex(\"Check\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 5,
            },
            kind: Check,
        },
    ],
)
