vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-2.snap
---
source: src/lexer/test.rs
expression: "lex(\"Add\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: Add,
        },
    ],
)
