vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-20.snap
---
source: src/lexer/test.rs
expression: "lex(\"Whether\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 7,
            },
            kind: Whether,
        },
    ],
)
