vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-21.snap
---
source: src/lexer/test.rs
expression: "lex(\"Then\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 4,
            },
            kind: Then,
        },
    ],
)
