vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-22.snap
---
source: src/lexer/test.rs
expression: "lex(\"Do\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 2,
            },
            kind: Do,
        },
    ],
)
