vfpl_lexer/src/snapshots/vfpl__lexer__test__all_keywords-25.snap
---
source: src/lexer/test.rs
expression: "lex(\"Out\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 3,
            },
            kind: Out,
        },
    ],
)
